# models/user.go
@@ -10,3 +10,9 @@ type User struct {
 	Gender         string `db:"gender"`
 	Token          string
 }
+
+type UserLogin struct {
+	UserID   int64  `json:"user_id" db:"user_id"`    // 用户id
+	Username string `json:"user_name" db:"username"` // 用户名
+	Token    string `json:"token" `                  // access token
+}
